
[workspace]

members = [
    "array",
    "cargos/tests_project",
    "conversion/from",
    "conversion/into",
    "conversion/string",
    "conversion/try_trait",
    "custom_types",
    "exe",
    "expression",
    "flow/for_loop",
    "flow/if_else",
    "flow/if_let",
    "flow/loop_loop",
    "flow/match/binding",
    "flow/match/destructing",
    "flow/match/guard",
    "flow/while_loop",
    "fmt",
    "functions",
    "functions/closure",
    "hello",
    "primitives",
    "primitives/compound",
    "primitives/ops",
    "primitives/scalar",
    "references/custom_types",
    "references/primitive_types",
    "structs",
    "tricks",
    "types",
    "types/aliasing",
    "types/casting",
    "types/inference",
    "var_bindings",
    "vector",

]


